INFRA-7 add log types

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ts-logger module integrates Graylog, file logger and console log together",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/"
   },
   "repository": {
     "type": "git",
