--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-logger",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "ts-logger module integrates Graylog, file logger and console log together",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "mocha": "^3.2.0",
     "mockery": "^2.0.0"
   }
 }
